[WIP] Fix scroll in layout viewport when keyboard appears

--- a/index.html
+++ b/index.html
@@ -36,17 +36,31 @@
 
     if (isIPadIPhoneIPod()) addMaximumScaleToMetaViewport();
   </script>
+  <style>
+    /* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
+    .hide-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+    }
+
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none;   /* Chrome, Safari and Opera */
+    }
+  </style>
 </head>
 <body class="antialiased overflow-hidden bg-white">
-  <div id="main" class="flex flex-col overflow-hidden">
-    <div id="scrollView" class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
-      <div id="titleView" class="px-1.5 py-1.5 border-b border-gray-200">
-        <input type="text" name="titleInput" id="titleInput" class="block w-full border-0 bg-white px-1.5 py-1.5 text-xl font-normal text-gray-800 placeholder:text-gray-500 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
+  <div id="containView" class="w-full">
+    <div id="main" class="flex flex-col overflow-hidden">
+      <div id="scrollView" class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
+        <div id="titleView" class="px-1.5 py-1.5 border-b border-gray-200">
+          <input type="text" name="titleInput" id="titleInput" class="block w-full border-0 bg-white px-1.5 py-1.5 text-xl font-normal text-gray-800 placeholder:text-gray-500 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
+        </div>
+        <div id="bodyInput"></div>
+        <div id="spaceView"></div>
       </div>
-      <div id="bodyInput"></div>
-      <div id="spaceView"></div>
+      <div id="bodyToolbar" class="flex-grow-0 flex-shrink-0"></div>
     </div>
-    <div id="bodyToolbar" class="flex-grow-0 flex-shrink-0"></div>
+    <div id="overView" class="h-px hidden"></div>
   </div>
   <div id="maskView" class="fixed inset-0 bg-transparent hidden"></div>
   <!-- For Tailwind CSS -->
@@ -94,6 +108,50 @@
       };
     };
 
+    const setMainHeight = (height, doRepeat = false) => {
+      // github.com/react-native-webview/react-native-webview/issues/154
+      // Sometimes it fires too early and height is not finalized.
+      const containView = document.querySelector('#containView');
+      const main = document.querySelector('#main');
+
+      containView.style.height = height + 'px';
+      main.style.height = height + 'px';
+
+      if (!doRepeat) return;
+
+      setTimeout(() => {
+        containView.style.height = height + 'px';
+        main.style.height = height + 'px';
+      }, 1);
+      setTimeout(() => {
+        containView.style.height = height + 'px';
+        main.style.height = height + 'px';
+      }, 100);
+      setTimeout(() => {
+        containView.style.height = height + 'px';
+        main.style.height = height + 'px';
+      }, 250);
+    };
+
+    const preventScroll = () => {
+      const safeAreaHeight = Math.round(window.visualViewport.height);
+      const windowHeight = Math.round(window.innerHeight);
+
+      const containView = document.querySelector('#containView');
+      const overView = document.querySelector('#overView');
+      if (safeAreaHeight < windowHeight) {
+        containView.classList.add(
+          'overflow-y-scroll', 'overscroll-contain', 'hide-scrollbar',
+        );
+        overView.classList.remove('hidden');
+      } else {
+        containView.classList.remove(
+          'overflow-y-scroll', 'overscroll-contain', 'hide-scrollbar',
+        );
+        overView.classList.add('hidden');
+      }
+    };
+
     const setToolbarGroupedItemsDropdownMaxWidth = () => {
       if (!window.editor) return;
 
@@ -110,25 +168,23 @@
       }
     };
 
-    const main = document.querySelector('#main');
-    window.addEventListener('resize', () => {
-      // github.com/react-native-webview/react-native-webview/issues/154
-      // Sometimes it fires too early and height is not finalized.
-      main.style.height = window.innerHeight + 'px';
-      setTimeout(() => {
-        main.style.height = window.innerHeight + 'px';
-      }, 1);
-      setTimeout(() => {
-        main.style.height = window.innerHeight + 'px';
-      }, 100);
-      setTimeout(() => {
-        main.style.height = window.innerHeight + 'px';
-      }, 250);
-    });
-    main.style.height = window.innerHeight + 'px';
+    if (window.visualViewport) {
+      setMainHeight(window.visualViewport.height, false);
+      window.visualViewport.addEventListener('resize', () => {
+        setMainHeight(window.visualViewport.height, true);
+      });
 
+      window.visualViewport.addEventListener('resize', throttle(() => {
+        setTimeout(preventScroll, 100);
+      }, 16));
+    } else {
+      setMainHeight(window.innerHeight, false);
+      window.addEventListener('resize', () => {
+        setMainHeight(window.innerHeight, true);
+      });
+    }
     window.addEventListener('resize', throttle(() => {
-      setToolbarGroupedItemsDropdownMaxWidth();
+      setTimeout(setToolbarGroupedItemsDropdownMaxWidth, 100);
     }, 16));
 
     const editorConfig = {
