--- a/index.html
+++ b/index.html
@@ -189,10 +189,12 @@
       const groupedItemsDropdown = editor.ui.view.toolbar._behavior.groupedItemsDropdown;
       if (!groupedItemsDropdown) return;
 
-      if (window.innerWidth < 389) {
-        groupedItemsDropdown.toolbarView.maxWidth = '256px';
+      if (window.innerWidth < 350) {
+        groupedItemsDropdown.toolbarView.maxWidth = '224px';
       } else if (window.innerWidth < 428) {
-        groupedItemsDropdown.toolbarView.maxWidth = '218px';
+        groupedItemsDropdown.toolbarView.maxWidth = '256px';
+      } else if (window.innerWidth < 468) {
+        groupedItemsDropdown.toolbarView.maxWidth = '216px';
       } else {
         groupedItemsDropdown.toolbarView.maxWidth = '';
       }
@@ -269,6 +271,10 @@
         ],
         columns: 6,
         documentColors: 0,
+      },
+      link: {
+        addTargetToExternalLinks: true,
+        defaultProtocol: 'http://',
       },
     };
 
