--- a/index.html
+++ b/index.html
@@ -346,60 +346,10 @@
           document.querySelector('#titleInput').addEventListener('focus', onFocusChange);
           editor.editing.view.document.on('change:isFocused', onFocusChange);
 
-          const updateTitleInputThemeMode = (mode) => {
-            const titleInput = document.querySelector('#titleInput');
-
-            for (const className of titleInput.classList.values()) {
-              // If highlight, no need to update theme class names.
-              if (className.includes('yellow')) return;
-            }
-
-            if (mode === 1) {
-              titleInput.classList.add(
-                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-              );
-            } else {
-              titleInput.classList.remove(
-                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-              );
-            }
-          };
-
-          const updateTitleInputHighlight = (doHighlight) => {
-            const titleInput = document.querySelector('#titleInput');
-
-            let themeMode = 0;
-            for (const className of titleInput.classList.values()) {
-              if (className.startsWith('blk:')) {
-                themeMode = 1;
-                break;
-              }
-            }
-
-            if (doHighlight) {
-              titleInput.classList.remove(
-                'bg-white', 'text-gray-800', 'placeholder:text-gray-500',
-                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-              );
-              titleInput.classList.add(
-                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
-              );
-            } else {
-              titleInput.classList.remove(
-                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
-              );
-              titleInput.classList.add(
-                'bg-white', 'text-gray-800', 'placeholder:text-gray-500'
-              );
-              if (themeMode === 1) {
-                titleInput.classList.add(
-                  'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-                );
-              }
-            }
-          };
-
+          let themeMode = 0;
           const setThemeMode = (mode) => {
+            themeMode = mode;
+
             const body = document.querySelector('body');
             if (mode === 1) body.classList.add('blk:bg-gray-900');
             else body.classList.remove('blk:bg-gray-900');
@@ -415,7 +365,19 @@
             if (mode === 1) titleView.classList.add('blk:border-gray-700');
             else titleView.classList.remove('blk:border-gray-700');
 
-            updateTitleInputThemeMode(mode);
+            // If highlight, no need to update theme class names.
+            if (doHighlightTitle) return;
+
+            const titleInput = document.querySelector('#titleInput');
+            if (mode === 1) {
+              titleInput.classList.add(
+                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+              );
+            } else {
+              titleInput.classList.remove(
+                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+              );
+            }
           };
           // semi-collon to end a function is important for export-ckeditor-as-string.js
 
@@ -589,13 +551,42 @@
           document.querySelector('#titleInput').addEventListener('input', onDataChange);
           editor.model.document.on('change:data', onDataChange);
 
-          const setFind = (doHighlightTitle, searchString, matchCase) => {
-            updateTitleInputHighlight(doHighlightTitle);
+          const updateTitleInputHighlight = () => {
+            const titleInput = document.querySelector('#titleInput');
+            if (doHighlightTitle) {
+              titleInput.classList.remove(
+                'bg-white', 'text-gray-800', 'placeholder:text-gray-500',
+                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+              );
+              titleInput.classList.add(
+                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
+              );
+            } else {
+              titleInput.classList.remove(
+                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
+              );
+              titleInput.classList.add(
+                'bg-white', 'text-gray-800', 'placeholder:text-gray-500'
+              );
+              if (themeMode === 1) {
+                titleInput.classList.add(
+                  'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+                );
+              }
+            }
+          };
+
+          let doHighlightTitle = false;
+          const setFind = (doHighlight, searchString, matchCase) => {
+            doHighlightTitle = doHighlight;
+            updateTitleInputHighlight();
+
             editor.execute('find', searchString, { matchCase });
           };
 
           const clearFind = () => {
-            updateTitleInputHighlight(false);
+            doHighlightTitle = false;
+            updateTitleInputHighlight();
 
             const ui = editor.plugins.get('FindAndReplaceUI');
             if (ui) ui.fire('searchReseted');
