--- a/index.html
+++ b/index.html
@@ -346,10 +346,37 @@
           document.querySelector('#titleInput').addEventListener('focus', onFocusChange);
           editor.editing.view.document.on('change:isFocused', onFocusChange);
 
-          let themeMode = 0;
-          const setThemeMode = (mode) => {
-            themeMode = mode;
+          let themeMode = 0, doHighlightTitle = false;
+          const updateTitleInputClassNames = () => {
+            const titleInput = document.querySelector('#titleInput');
+            if (doHighlightTitle) {
+              titleInput.classList.remove(
+                'bg-white', 'text-gray-800', 'placeholder:text-gray-500',
+                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+              );
+              titleInput.classList.add(
+                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
+              );
+            } else {
+              titleInput.classList.remove(
+                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
+              );
+              titleInput.classList.add(
+                'bg-white', 'text-gray-800', 'placeholder:text-gray-500'
+              );
+              if (themeMode === 1) {
+                titleInput.classList.add(
+                  'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+                );
+              } else {
+                titleInput.classList.remove(
+                  'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
+                );
+              }
+            }
+          };
 
+          const setThemeMode = (mode) => {
             const body = document.querySelector('body');
             if (mode === 1) body.classList.add('blk:bg-gray-900');
             else body.classList.remove('blk:bg-gray-900');
@@ -365,19 +392,8 @@
             if (mode === 1) titleView.classList.add('blk:border-gray-700');
             else titleView.classList.remove('blk:border-gray-700');
 
-            // If highlight, no need to update theme class names.
-            if (doHighlightTitle) return;
-
-            const titleInput = document.querySelector('#titleInput');
-            if (mode === 1) {
-              titleInput.classList.add(
-                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-              );
-            } else {
-              titleInput.classList.remove(
-                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-              );
-            }
+            themeMode = mode;
+            updateTitleInputClassNames();
           };
           // semi-collon to end a function is important for export-ckeditor-as-string.js
 
@@ -551,42 +567,16 @@
           document.querySelector('#titleInput').addEventListener('input', onDataChange);
           editor.model.document.on('change:data', onDataChange);
 
-          const updateTitleInputHighlight = () => {
-            const titleInput = document.querySelector('#titleInput');
-            if (doHighlightTitle) {
-              titleInput.classList.remove(
-                'bg-white', 'text-gray-800', 'placeholder:text-gray-500',
-                'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-              );
-              titleInput.classList.add(
-                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
-              );
-            } else {
-              titleInput.classList.remove(
-                'bg-yellow-300', 'text-gray-800', 'placeholder:text-gray-500'
-              );
-              titleInput.classList.add(
-                'bg-white', 'text-gray-800', 'placeholder:text-gray-500'
-              );
-              if (themeMode === 1) {
-                titleInput.classList.add(
-                  'blk:bg-gray-900', 'blk:text-gray-200', 'blk:placeholder:text-gray-400'
-                );
-              }
-            }
-          };
-
-          let doHighlightTitle = false;
           const setFind = (doHighlight, searchString, matchCase) => {
             doHighlightTitle = doHighlight;
-            updateTitleInputHighlight();
+            updateTitleInputClassNames();
 
             editor.execute('find', searchString, { matchCase });
           };
 
           const clearFind = () => {
             doHighlightTitle = false;
-            updateTitleInputHighlight();
+            updateTitleInputClassNames();
 
             const ui = editor.plugins.get('FindAndReplaceUI');
             if (ui) ui.fire('searchReseted');
