--- a/index.html
+++ b/index.html
@@ -326,6 +326,12 @@
           urlInput.on('change:isFocused', (evt, data, isFocused) => {
             if (isFocused) scrollWindowTop();
           });
+
+          const inputElement = urlInput.fieldView.element;
+          if (inputElement) {
+            inputElement.setAttribute('inputmode', 'url');
+            inputElement.setAttribute('autocapitalize', 'none');
+          }
         }
 
         if (window.ReactNativeWebView) {
