--- a/index.html
+++ b/index.html
@@ -156,9 +156,18 @@
       }, 250);
     };
 
+    let _isScrollingWindowTop = false;
     const _scrollWindowTop = () => {
+      // Prevent calling while scrolling i.e. change on both visual height and focus.
+      if (_isScrollingWindowTop) return;
+      _isScrollingWindowTop = true;
+
       // scrollTo 0 doesn't work, need scrollBy with big enough number.
       window.scrollBy({ top: window.innerHeight * -1, behavior: 'smooth' });
+
+      setTimeout(() => {
+        _isScrollingWindowTop = false;
+      }, 100);
     };
 
     const scrollWindowTop = () => {
