Improve dark mode on CKEditor

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       },
       fontColor: {
         colors: [
-          { color: 'rgb(31, 41, 55)', label: 'Black' },
+          { color: 'rgb(31, 41, 55)', label: 'Black', hasBorder: true },
           { color: 'rgb(107, 114, 128)', label: 'Gray' },
           { color: 'rgb(185, 28, 28)', label: 'Red' },
           { color: 'rgb(252, 211, 77)', label: 'Yellow' },
@@ -285,7 +285,7 @@
       },
       fontBackgroundColor: {
         colors: [
-          { color: 'rgb(31, 41, 55)', label: 'Black' },
+          { color: 'rgb(31, 41, 55)', label: 'Black', hasBorder: true },
           { color: 'rgb(107, 114, 128)', label: 'Gray' },
           { color: 'rgb(239, 68, 68)', label: 'Red' },
           { color: 'rgb(252, 211, 77)', label: 'Yellow' },
@@ -406,6 +406,15 @@
             const titleView = document.querySelector('#titleView');
             if (mode === 1) titleView.classList.add('blk:border-gray-700');
             else titleView.classList.remove('blk:border-gray-700');
+
+            const wrapper = document.querySelector('.ck-body-wrapper');
+            if (wrapper) {
+              if (mode === 0) wrapper.classList.add('wht-mode');
+              else wrapper.classList.remove('wht-mode');
+
+              if (mode === 1) wrapper.classList.add('blk-mode');
+              else wrapper.classList.remove('blk-mode');
+            }
 
             themeMode = mode;
             updateTitleInputClassNames();
