Fix disabled input text color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="/css/tailwind.css">
   <link rel="stylesheet" href="/css/ckeditor.css">
   <style>
+    #titleInput:disabled {
+      -webkit-text-fill-color: rgb(31, 41, 55);
+      opacity: 1;
+    }
+    .blk-mode #titleInput:disabled {
+      -webkit-text-fill-color: rgb(229, 231, 235);
+    }
+
     /* https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
     .hide-scrollbar {
       -ms-overflow-style: none;  /* IE and Edge */
