--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
   <!--   <ul><li><label><input type="checkbox" /></label><span></span></li></ul> -->
   <!-- End -->
   <script>
+    const isObject = val => {
+      return typeof val === 'object' && val !== null;
+    };
+
+    const isNumber = val => {
+      return typeof val === 'number' && isFinite(val);
+    };
+
     const throttle = (func, limit) => {
       let lastFunc;
       let lastRan;
@@ -283,7 +291,7 @@
         setTimeout(preventScroll, 100);
       }, 16));
 
-      const scrollListener = debounce(() => scrollWindowTopOrIntoView(), 100);
+      const scrollListener = debounce(() => scrollWindowIntoView(), 100);
       window.visualViewport.addEventListener('scroll', scrollListener);
     } else {
       setMainWindowHeight(true);
