--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         setTimeout(preventScroll, 100);
       }, 16));
 
-      const scrollListener = debounce(() => scrollWindowIntoView(), 100);
+      const scrollListener = debounce(() => scrollWindowTopOrIntoView(), 100);
       window.visualViewport.addEventListener('scroll', scrollListener);
     } else {
       setMainWindowHeight(true);
