No change title font size on big screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="main" class="flex flex-col overflow-hidden">
     <div id="scrollView" class="flex-grow flex-shrink overflow-x-hidden overflow-y-auto">
       <div id="titleView" class="px-1.5 py-1.5 border-b border-gray-200">
-        <input type="text" name="titleInput" id="titleInput" class="block w-full border-0 bg-white px-1.5 py-1.5 text-xl font-normal text-gray-800 placeholder:text-gray-500 focus:outline-none focus:ring-0 lg:text-lg" placeholder="Note Title" />
+        <input type="text" name="titleInput" id="titleInput" class="block w-full border-0 bg-white px-1.5 py-1.5 text-xl font-normal text-gray-800 placeholder:text-gray-500 focus:outline-none focus:ring-0" placeholder="Note Title" />
       </div>
       <div id="bodyInput"></div>
       <div id="spaceView"></div>
