Disable MediaEmbed plugin for now

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     const editorConfig = {
       placeholder: 'Start writing...',
-      removePlugins: ['Autoformat'],
+      removePlugins: ['Autoformat', 'MediaEmbed'],
       fontSize: {
         options: [
           'tiny', 'small', 'default', 'big', 'huge',
