--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     }
 
     const editorConfig = {
+      licenseKey: 'GPL',
       placeholder: 'Start writing...',
       removePlugins: ['Autoformat', 'MediaEmbed'],
       fontSize: {
