--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
       }
       if (!toolbarView) return;
 
-      if (window.innerWidth < 350) toolbarView.maxWidth = '224px';
-      else if (window.innerWidth < 428) toolbarView.maxWidth = '256px';
-      else if (window.innerWidth < 468) toolbarView.maxWidth = '216px';
+      if (window.innerWidth < 350) toolbarView.maxWidth = '14rem';
+      else if (window.innerWidth < 428) toolbarView.maxWidth = '16rem';
+      else if (window.innerWidth < 468) toolbarView.maxWidth = '13.5rem';
       else toolbarView.maxWidth = '';
     };
 
